--- a/templates/page_kpi/budget_overview.html
+++ b/templates/page_kpi/budget_overview.html
@@ -2,6 +2,7 @@
 {% load helper_tags page_tags core_tags humanize %}
 
 {% block html_head %}
+{% access user 'program budget remark edit' schedule.program %}
 <script type="text/javascript">
 $(document).ready(function() {
     $(".modify-remark").click(function(e) {
@@ -18,6 +19,7 @@ $(document).ready(function() {
     });
 });
 </script>
+{% endaccess %}
 {% endblock %}
 
 {% block body_title %}{% display_budget_header user schedule %}{% endblock %}
@@ -38,17 +40,19 @@ $(document).ready(function() {
 	
     <h2 class="h2">หมายเหตุ</h2>
     <div class="remark_panel">
-        {% if schedule.remark %}
-        <div class="remark">
+    	<div class="remark">
+    		{% if schedule.remark %}
             <p>{{schedule.remark}}</p>
-            <div class="actions"><a href="#" class="modify-remark">แก้ไขหมายเหตุ</a></div>
+			{% else %}
+			<div class="ss_no_information">ไม่มีหมายเหตุ</div>
+			{% endif %}
+			
+			{% access user 'program budget remark edit' schedule.program %}
+	        <a href="#" class="modify-remark">แก้ไขหมายเหตุ</a>
+	        {% endaccess %}
         </div>
-        {% else %}
-        <div class="remark">
-            <a href="#" class="modify-remark">เพิ่มหมายเหตุ</a>
-        </div>
-        {% endif %}
-        <form action="." method="post" id="remarkForm">
+    	
+		<form action="." method="post" id="remarkForm">
             {% csrf_token %}
             {{form.remark}}
             <div class="button_panel"><button class="save-remark-button" type="submit">บันทึก</button><button class="cancel-remark-button">ยกเลิก</button></div>
