fix change user password in admin page

--- a/templates/page_administration/manage_users_change_password.html
+++ b/templates/page_administration/manage_users_change_password.html
@@ -21,6 +21,8 @@
 		<div><a href="{% url view_administration_users %}">กลับไปหน้ารายชื่อผู้ใช้ &#187;</a></div>
 	{% else %}
 		<form action='.' method='POST' class="ss_form">
+			{% csrf_token %}
+			
 	        <ul>
 	            <li>
 	                <label for="id_password1" class="caption">{{form.password1.label}}{% display_required %}</label>
