--- a/templates/page_sector/manage_master_plan/manage_report_modify_report.html
+++ b/templates/page_sector/manage_master_plan/manage_report_modify_report.html
@@ -48,6 +48,17 @@ $(document).ready(function() {
         
         new_row.insertBefore($(this));
     });
+	
+	$(".yui_date_picker").click(function(e) {
+		console.log(e.target.id);
+        activeCalendarInputID = e.target.id;
+        triggerYUICalendar();
+    });
+	
+	$(".yui_date_picker_textbox").click(function(e) {
+        activeCalendarInputID = $(this).parent().find(".yui_date_picker").attr('id');
+        triggerYUICalendar();
+    });
     
     $(".specific_due_panel .remove_row").click(function(e) {
         if(window.confirm("ยืนยันการลบวันที่?")) {
@@ -113,8 +124,8 @@ $(document).ready(function() {
                         {% for due_date in report.due_dates %}
                         <div class="due_row">
                             <span class="yui_date_picker_panel">
-                                <input type="hidden" name="due_dates" value="{{due_date.due_date|date:"Y-n-j"}}" id="id_due_date_a{{due_date.id}}_value"/>
-                                <input type="text" value="{{due_date.due_date|date:"j F"}} {{due_date.due_date.year|add:543}}" id="id_due_date_a{{due_date.id}}_display" readonly="readonly" class="yui_date_picker_textbox"/>
+                                <input type="hidden" name="due_dates" value="{{due_date.due_date|date:"Y-n-j"}}" id="id_due_date_{{due_date.id}}_value"/>
+                                <input type="text" value="{{due_date.due_date|date:"j F"}} {{due_date.due_date.year|add:543}}" id="id_due_date_{{due_date.id}}_display" readonly="readonly" class="yui_date_picker_textbox"/>
                                 <img src="{{MEDIA_URL}}/images/input/date_picker.png" id="id_due_date_{{due_date.id}}" class="yui_date_picker"/>
                                 <img src="{{MEDIA_URL}}/images/input/date_picker_remove.png" class="remove_row"/>
                             </span>
