fix sector and master plan kpi page, change program ref_no name, adjust style on sector and master plan kpi and budget page

--- a/templates/page_administration/manage_organization.html
+++ b/templates/page_administration/manage_organization.html
@@ -37,8 +37,8 @@ $(document).ready(function() {
     <table class="ss_table">
         <tr>
             <th></th>
-            <th class="ref_no">เลขที่แผน</th>
-            <th class="name">ชื่อแผน</th>
+            <th class="ref_no">รหัสโครงการ</th>
+            <th class="name">ชื่อโครงการ</th>
             <th class="sector">สำนักที่ดูแล</th>
             <th class="manage"></th>
         </tr>
