--- a/media/css/styles.page.css
+++ b/media/css/styles.page.css
@@ -238,30 +238,21 @@ h2.h2 {font-size:146.5%;padding-bottom:5px;margin-bottom:10px;color:#2D8659;bord
 .sector_overview_page h2 {color:#2D8659;margin-bottom:15px;font-size:138.5%;border-bottom:1px solid #CCC;padding-bottom:5px;}
 .sector_overview_page .master_plans li {font-size:116%;margin-bottom:15px;}
 
-.sector_kpi_page .master_plans,
-.sector_budget_page .master_plans {margin-bottom:20px;}
-.sector_kpi_page .master_plans li,
-.sector_budget_page .master_plans li {padding:5px 0;}
+/* master_plan_d Budget Page */
+.sector_kpi_page .ss_table, .sector_budget_page .ss_table {margin:15px 0px 30px;}
+.sector_kpi_page .ss_table th, .sector_budget_page .ss_table th {text-align:center;}
 
-.sector_kpi_page .ss_table td,
-.sector_budget_page .ss_table td {font-size:100%;}
-.sector_kpi_page .ss_table th,
-.sector_budget_page .ss_table th {font-size:100%;text-align:center;}
+.sector_kpi_page .ss_table td.master_plan, .sector_budget_page .ss_table td.master_plan {font-size:123.1%;background-color:#488;color:#FFF;padding:10px;}
+.sector_kpi_page .ss_table td.plan, .sector_budget_page .ss_table td.plan {font-weight:bold;padding:10px;background-color:#FFD;}
+.sector_kpi_page .ss_table td.program, .sector_budget_page .ss_table td.program {width:270px;vertical-align:top;padding:10px;}
+.sector_kpi_page .ss_table td.program .abbr_name, .sector_budget_page .ss_table td.program .abbr_name {margin-top:6px;color:#555;}
 
-.sector_kpi_page .ss_table td.master_plan,
-.sector_budget_page .ss_table td.master_plan {font-size:123.1%;font-weight:bold;padding:10px;background-color:#FFD;}
-.sector_kpi_page .ss_table td.plan,
-.sector_budget_page .ss_table td.plan {font-weight:bold;padding:10px;background-color:#FFD;}
-.sector_kpi_page .ss_table td.program,
-.sector_budget_page .ss_table td.program {width:270px;vertical-align:top;padding:10px;}
+.sector_kpi_page .ss_table .schedules {vertical-align:top;text-align:center;}
+.sector_kpi_page .ss_table .schedules .schedule {background-color:#EEE;padding:5px;margin-bottom:8px;border:1px solid #CCC;text-align:left;}
+.sector_kpi_page .ss_table .schedules .schedule .kpi {font-weight:bold;}
 
-.sector_kpi_page .ss_table td.program .abbr_name,
-.sector_budget_page .ss_table td.program .abbr_name {margin-top:6px;color:#555;}
-
-.sector_kpi_page .ss_table td.target_kpi {background-color:#EEE;vertical-align:top;}
-.sector_budget_page .ss_table td.grant_budget {background-color:#EEE;text-align:center;vertical-align:top;}
-.sector_kpi_page .ss_table td.result_kpi,
-.sector_budget_page .ss_table td.claim_budget {text-align:center;vertical-align:top;}
+.sector_kpi_page .ss_table td.target_kpi, .sector_budget_page .ss_table td.grant_budget {background-color:#EEE;vertical-align:top;text-align:center;}
+.sector_kpi_page .ss_table td.result_kpi, .sector_budget_page .ss_table td.claim_budget {text-align:center;vertical-align:top;}
 
 .sector_budget_page .ss_table td.na {color:#CCC;}
 .sector_budget_page .ss_table td .number {margin-bottom:5px;}
@@ -312,17 +303,20 @@ h2.h2 {font-size:146.5%;padding-bottom:5px;margin-bottom:10px;color:#2D8659;bord
 
 
 /* Master Plan - KPI Page */
+.master_plan_kpi_page .ss_table, .sector_budget_page .ss_table {margin:15px 0px 30px;}
+.master_plan_kpi_page .ss_table th, .master_plan_budget_page .ss_table th {text-align:center;}
 
-.master_plan_kpi_page .ss_table td {font-size:100%;}
-.master_plan_kpi_page .ss_table th {font-size:100%;text-align:center;}
+.master_plan_kpi_page .ss_table td.master_plan, .master_plan_budget_page .ss_table td.master_plan {font-size:123.1%;background-color:#488;color:#FFF;padding:10px;}
+.master_plan_kpi_page .ss_table td.plan, .master_plan_budget_page .ss_table td.plan {font-weight:bold;padding:10px;background-color:#FFD;}
+.master_plan_kpi_page .ss_table td.program, .master_plan_budget_page .ss_table td.program {width:270px;vertical-align:top;padding:10px;}
+.master_plan_kpi_page .ss_table td.program .abbr_name, .master_plan_budget_page .ss_table td.program .abbr_name {margin-top:6px;color:#555;}
 
-.master_plan_kpi_page .ss_table td.plan {font-weight:bold;padding:10px;background-color:#FFD;}
-.master_plan_kpi_page .ss_table td.program {width:270px;vertical-align:top;padding:10px;}
+.master_plan_kpi_page .ss_table .schedules {vertical-align:top;text-align:center;}
+.master_plan_kpi_page .ss_table .schedules .schedule {background-color:#EEE;padding:5px;margin-bottom:8px;border:1px solid #CCC;text-align:left;}
+.master_plan_kpi_page .ss_table .schedules .schedule .kpi {font-weight:bold;}
 
-.master_plan_kpi_page .ss_table td.program .abbr_name {margin-top:6px;color:#555;}
-
-.master_plan_kpi_page .ss_table td.target_kpi {background-color:#EEE;vertical-align:top;}
-.master_plan_kpi_page .ss_table td.result_kpi {text-align:center;vertical-align:top;}
+.master_plan_kpi_page .ss_table td.target_kpi, .master_plan_budget_page .ss_table td.grant_budget {background-color:#EEE;vertical-align:top;text-align:center;}
+.master_plan_kpi_page .ss_table td.result_kpi, .master_plan_budget_page .ss_table td.claim_budget {text-align:center;vertical-align:top;}
 
 /* Master Plan - Budget Page */
 
